# LispSSS

./: .gitignore  CMakeLists.txt  NOTES.txt  README  README.md  calc_ssslisp.lsp  config.h  data.h  externfunction.cpp  externfunction.h  func_test.sss  funccontroller.cpp  funccontroller.h  function.cpp  function.h  lispexecuter.cpp  lispexecuter.h  lispfunction.cpp  lispfunction.h  lispnode.cpp  lispnode.h  lispstring.cpp  lispstring.h  main.cpp  memory.cpp  memory.h  message.cpp  message.h  operator_tests.sss  playLisp.pro  sort.sss  stack.cpp  stack.h  test.sss  test_simple.sss  value.h  var.cpp  var.h
data_types/: atomfloatdata.cpp  atomfloatdata.h  atomintdata.cpp  atomintdata.h  atomstrdata.cpp  atomtdata.cpp  atomtdata.h  funcdata.cpp  funcdata.h
doc/: DataTypes.dia  FunctionTypes.dia  LexemTree.dia  MainCircuit.dia  StackStruct.dia  example.doc
examples/lisp_web/: .gitignore  CMakeLists.txt  LispSSS  LispSSS.html  LispSSS.js  cmake_install.cmake  index.html
functions/: func___global.cpp  func___global.h  func__div_.cpp  func__div_.h  func__equ_.cpp  func__equ_.h  func__greater_.cpp  func__greaterequ_.cpp  func__less_.cpp  func__less_.h  func__lessequ_.cpp  func__lessequ_.h  func__minus_.cpp  func__minus_.h  func__mul_.cpp  func__mul_.h  func__notequ_.cpp  func__notequ_.h  func__or_.cpp  func__or_.h  func__plus_.cpp  func__plus_.h  func__power_.cpp  func_ask.cpp  func_ask.h  func_car.cpp  func_car.h  func_cdr.cpp  func_cdr.h  func_continue.cpp  func_continue.h  func_defun.cpp  func_defun.h  func_exec.h  func_func.cpp  func_func.h  func_if.cpp  func_if.h  (+12 more)
(+134 files in other folders)
